force-app/main/default/objects/Account/fields/Demo1__c.field-meta.xml
<CustomField>
    <fullName>Demo1__c</fullName>
    <displayFormat>Z-{0000}</displayFormat>
    <label>Demo1</label>
    <type>AutoNumber</type>
</CustomField>