force-app/main/default/objects/Account/fields/Demo3__c.field-meta.xml
<CustomField>
    <fullName>Demo3__c</fullName>
    <formula>Name +  AccountNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Demo3</label>
    <type>Text</type>
</CustomField>