force-app/main/default/objects/Account/fields/Initial_Account_Balance__c.field-meta.xml
<CustomField>
    <fullName>Initial_Account_Balance__c</fullName>
    <label>Initial Account Balance</label>
    <precision>11</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>