force-app/main/default/objects/Account/fields/Related_contacts__c.field-meta.xml
<CustomField>
    <fullName>Related_contacts__c</fullName>
    <label>Related contacts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>