force-app/main/default/objects/Account/fields/Total_Opportunity_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Opportunity_Amount__c</fullName>
    <label>Total Opportunity Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>