force-app/main/default/objects/Account/recordTypes/Prospect_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>Prospect_Record_Type</fullName>
    <active>true</active>
    <description>Test</description>
    <label>Prospect Record Type</label>
</RecordType>