force-app/main/default/objects/Account/validationRules/Account_Number_8_Characters.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_Number_8_Characters</fullName>
    <active>false</active>
    <errorConditionFormula>LEN( AccountNumber )  &lt;&gt; 8</errorConditionFormula>
    <errorMessage>Account number must be 8 characters long.</errorMessage>
</ValidationRule>