force-app/main/default/objects/Account/validationRules/Contact_must_be_in_Account_ZIP_Code.validationRule-meta.xml
<ValidationRule>
    <fullName>Contact_must_be_in_Account_ZIP_Code</fullName>
    <active>false</active>
    <errorConditionFormula>AND( NOT( ISBLANK( Id ) ),  (Owner.Contact.MailingPostalCode  &lt;&gt;  ShippingPostalCode  ))</errorConditionFormula>
    <errorMessage>The contact is associated with an account id or The contact mailing zip code is different than the account shipping zip code</errorMessage>
</ValidationRule>